--- a/Northwind/Northwind/Views/Home/Index.cshtml
+++ b/Northwind/Northwind/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 @model Northwind.Models.Validation.Register
 
 @{
-    ViewBag.Title = "Home Page" + Model.Message; ;
+    ViewBag.Title = "Home Page";
 }
 
 <div class="jumbotron">
