--- a/Northwind/Northwind/Views/Shared/_Layout.cshtml
+++ b/Northwind/Northwind/Views/Shared/_Layout.cshtml
@@ -8,6 +8,13 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
+    <div>
+        @if (Request.IsAuthenticated)
+        {
+            @Html.Label(@"Check label");
+            
+        }      
+    </div>    
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
