--- a/Northwind/Northwind/Views/Shared/_Layout.cshtml
+++ b/Northwind/Northwind/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNet.Identity;
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -7,14 +9,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
-<body>
-    <div>
-        @if (Request.IsAuthenticated)
-        {
-            @Html.Label(@"Check label");
-            
-        }      
-    </div>    
+<body>    
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -23,7 +18,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Northwind", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -34,6 +29,20 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
+                <div class="nav navbar-nav navbar-right">
+                    @if (User.Identity.IsAuthenticated == true)
+                    {
+                        <div class="navbar-text">
+                            
+                        </div>
+                    }   
+                    <div>
+                        @Html.ActionLink("SignIn", "Login", "Validation")
+                    </div>
+                    <div>
+                        @Html.ActionLink("SignOut", "LogOut", "Validation")
+                    </div>
+                </div>
             </div>
         </div>
     </div>
