--- a/Northwind/Northwind/Content/Site.css
+++ b/Northwind/Northwind/Content/Site.css
@@ -1,10 +1,12 @@
 ﻿body {
-    padding-top: 50px;
+    padding-top:150;
     padding-bottom: 20px;
+
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
+    padding-top:80px;
     padding-left: 15px;
     padding-right: 15px;
 }
@@ -21,4 +23,19 @@ input,
 select,
 textarea {
     max-width: 280px;
+    float: right;
+}
+
+.wrapper
+{
+    /*margin: auto; 
+    float:left;*/
+    max-width: 400px;
+       
+}
+
+#RegisterID
+{
+     margin: auto;
+    float:left;
 }
